--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minecraft Skin Converter</title>
 
-  <!-- 🟣 Discord Embed -->
+  <!-- Discord Embed -->
   <meta property="og:title" content="Minecraft Skin Converter">
   <meta property="og:description" content="Convert any 64x32 skin to 64x64.">
   <meta property="og:image" content="https://s.namemc.com/2d/skin/face.png?id=170217c0780b9ec8&scale=4">
   <meta property="og:url" content="https://anakamath.github.io/mcskinconverter/">
   <meta name="twitter:card" content="summary_large_image">
 
-  <!-- 🟡 Favicon -->
+  <!-- Favicon -->
   <link rel="icon" href="https://s.namemc.com/2d/skin/face.png?id=170217c0780b9ec8&scale=4" type="image/png">
 
   <link rel="stylesheet" href="style.css" />
@@ -21,13 +21,13 @@
 <body>
   <div class="overlay"></div>
   <main>
-    <h1>Skin Converter</h1>
-    <label for="skinInput">Upload 64x32 Minecraft Skin</label>
-    <input type="file" id="skinInput" accept="image/png" />
-    <button id="convertBtn">Convert to 64x64</button>
+    <h1>64x32 to 64x64 Skin Converter</h1>
+    <input type="file" id="skinInput" accept="image/png">
+    <button id="convertBtn">Convert Skin</button>
     <div id="status"></div>
     <div id="result"></div>
   </main>
+
   <script src="script.js"></script>
 </body>
 </html>
