but where are those good old fashioned values?
on which we used to relyy, lucky there is a idk guy

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minecraft Skin Converter</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
   <!-- Discord Embed -->
   <meta property="og:title" content="Minecraft Skin Converter">
@@ -14,20 +16,17 @@
 
   <!-- Favicon -->
   <link rel="icon" href="https://s.namemc.com/2d/skin/face.png?id=170217c0780b9ec8&scale=4" type="image/png">
-
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.cdnfonts.com/css/minecraftia" rel="stylesheet">
-</head>
 <body>
   <div class="overlay"></div>
   <main>
     <h1>64x32 to 64x64 Skin Converter</h1>
-    <input type="file" id="skinInput" accept="image/png">
+    <input type="file" id="skinInput" accept="image/png" />
     <button id="convertBtn">Convert Skin</button>
     <div id="status"></div>
     <div id="result"></div>
   </main>
-
   <script src="script.js"></script>
 </body>
+</html>
+
 </html>
