--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minecraft Skin Converter</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
 
   <!-- Discord Embed -->
   <meta property="og:title" content="Minecraft Skin Converter">
   <meta property="og:description" content="Convert any 64x32 skin to 64x64.">
   <meta property="og:image" content="https://s.namemc.com/2d/skin/face.png?id=170217c0780b9ec8&scale=4">
   <meta property="og:url" content="https://anakamath.github.io/mcskinconverter/">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="https://s.namemc.com/2d/skin/face.png?id=170217c0780b9ec8&scale=4">
 
   <!-- Favicon -->
   <link rel="icon" href="https://s.namemc.com/2d/skin/face.png?id=170217c0780b9ec8&scale=4" type="image/png">
+
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.cdnfonts.com/css/minecraftia" rel="stylesheet">
+</head>
 <body>
   <div class="overlay"></div>
   <main>
@@ -27,6 +29,4 @@
   </main>
   <script src="script.js"></script>
 </body>
-</html>
-
 </html>
